--- a/src/Microsoft.DotNet.CodeAnalysis.net45/project.json
+++ b/src/Microsoft.DotNet.CodeAnalysis.net45/project.json
@@ -7,7 +7,9 @@
     "System.Reflection.Metadata": "1.3.0",
     "System.Runtime.Analyzers": "1.1.0",
     "System.Runtime.InteropServices.Analyzers": "1.1.0",
-    "Microsoft.CodeAnalysis.FxCopAnalyzers": "1.1.0"
+    "Microsoft.CodeAnalysis.FxCopAnalyzers": "1.1.0",
+    "Microsoft.Maintainability.Analyzers": "1.2.0-beta2",
+    "Microsoft.QualityGuidelines.Analyzers": "1.2.0-beta2"
   },
   "frameworks": {
     "net45": { }
