--- a/src/Microsoft.DotNet.CodeAnalysis/project.json
+++ b/src/Microsoft.DotNet.CodeAnalysis/project.json
@@ -11,7 +11,9 @@
     "System.Runtime.InteropServices.Analyzers": "1.1.0",
     "System.Reflection.Metadata": "1.3.0",
     "System.Runtime.Extensions": "4.1.0",
-    "Microsoft.CodeAnalysis.FxCopAnalyzers": "1.1.0"
+    "Microsoft.CodeAnalysis.FxCopAnalyzers": "1.1.0",
+    "Microsoft.Maintainability.Analyzers": "1.2.0-beta2",
+    "Microsoft.QualityGuidelines.Analyzers": "1.2.0-beta2"
   },
   "frameworks": {
     "netcoreapp1.0": {
